// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > dopasowuje snapshot bez imienia i nazwiska (tłumaczenie „O mnie” niepublikowane/niedostępne — nie blokuje renderu headera) oraz z pełnym brandingiem 1`] = `
<header
  class="_siteHeader_a5b977"
>
  <div
    class="_brandBlock_a5b977"
  >
    <div
      class="_brandLogoCol_a5b977"
    >
      <a
        aria-label="okowFormie — home"
        class="_brandLogoLink_a5b977"
        href="/en/o-mnie"
      >
        <img
          alt=""
          class="_brandMark_a5b977"
          src="http://backend:8000/media/branding/logo/abc123.png"
        />
      </a>
      <div
        class="_brandSocial_a5b977"
      >
        <a
          aria-label="okowFormie on LinkedIn"
          class="_isLinkedin_a5b977"
          href="https://www.linkedin.com/company/okowformie"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.94 5a1.94 1.94 0 1 1-3.88 0 1.94 1.94 0 0 1 3.88 0ZM3.5 8.5h3.4V20H3.5V8.5Zm6.2 0h3.26v1.57h.05c.45-.86 1.56-1.76 3.22-1.76 3.44 0 4.08 2.27 4.08 5.22V20h-3.4v-5.7c0-1.36-.02-3.1-1.89-3.1-1.9 0-2.19 1.48-2.19 3v5.8H9.7V8.5Z"
            />
          </svg>
        </a>
        <a
          aria-label="okowFormie on Instagram"
          class="_isInstagram_a5b977"
          href="https://www.instagram.com/okowformie"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            stroke-width="1.8"
            viewBox="0 0 24 24"
          >
            <rect
              height="17"
              rx="5"
              width="17"
              x="3.5"
              y="3.5"
            />
            <circle
              cx="12"
              cy="12"
              r="4.2"
            />
            <circle
              cx="17.1"
              cy="6.9"
              fill="currentColor"
              r="0.9"
              stroke="none"
            />
          </svg>
        </a>
        <a
          aria-label="okowFormie on Facebook"
          class="_isFacebook_a5b977"
          href="https://www.facebook.com/okowformie"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.5 21v-7.2h2.4l.36-2.8h-2.76V9.18c0-.81.22-1.36 1.39-1.36h1.48V5.32c-.26-.03-1.14-.11-2.17-.11-2.15 0-3.62 1.31-3.62 3.72v2.07H9.2v2.8h2.38V21h2.92Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
  <p
    class="_siteTitle_a5b977"
  >
    <span
      class="_siteTitleName_a5b977"
    >
      <span
        class="_siteTitleNameTeal_a5b977"
      >
        Oko
      </span>
       
      <span
        class="_siteTitleNameNavy_a5b977"
      >
        w
      </span>
       
      <span
        class="_siteTitleNameIndigo_a5b977"
      >
        Formie
      </span>
    </span>
  </p>
  <nav
    aria-label="Site sections"
    class="_tabs_a5b977"
  >
    <a
      class="_tab_a5b977"
      href="/en/o-mnie"
    >
      About
    </a>
    <a
      class="_tab_a5b977"
      href="/en/posty"
    >
      Posts
    </a>
  </nav>
</header>
`;

exports[`Header > dopasowuje snapshot z \`branding: null\` (błąd pobrania) — fallback na statyczne \`/brand/logo.png\`, bez linków social 1`] = `
<header
  class="_siteHeader_a5b977"
>
  <div
    class="_brandBlock_a5b977"
  >
    <div
      class="_brandLogoCol_a5b977"
    >
      <a
        aria-label="okowFormie — strona główna"
        class="_brandLogoLink_a5b977"
        href="/pl/o-mnie"
      >
        <img
          alt=""
          class="_brandMark_a5b977"
          src="/brand/logo.png"
        />
      </a>
    </div>
  </div>
  <p
    class="_siteTitle_a5b977"
  >
    <span
      class="_siteTitleName_a5b977"
    >
      <span
        class="_siteTitleNameTeal_a5b977"
      >
        Oko
      </span>
       
      <span
        class="_siteTitleNameNavy_a5b977"
      >
        w
      </span>
       
      <span
        class="_siteTitleNameIndigo_a5b977"
      >
        Formie
      </span>
    </span>
    <span
      class="_siteTitleAuthor_a5b977"
    >
      Anna Kowalska
    </span>
  </p>
  <nav
    aria-label="Sekcje strony"
    class="_tabs_a5b977"
  >
    <a
      aria-current="page"
      class="_tab_a5b977 _tabActive_a5b977"
      href="/pl/o-mnie"
    >
      O mnie
    </a>
    <a
      class="_tab_a5b977"
      href="/pl/posty"
    >
      Posty
    </a>
  </nav>
</header>
`;

exports[`Header > dopasowuje snapshot z dostępnym imieniem i nazwiskiem autorki (\`about.full_name\` z API) oraz pełnym brandingiem (logo + 3 linki social) 1`] = `
<header
  class="_siteHeader_a5b977"
>
  <div
    class="_brandBlock_a5b977"
  >
    <div
      class="_brandLogoCol_a5b977"
    >
      <a
        aria-label="okowFormie — strona główna"
        class="_brandLogoLink_a5b977"
        href="/pl/o-mnie"
      >
        <img
          alt=""
          class="_brandMark_a5b977"
          src="http://backend:8000/media/branding/logo/abc123.png"
        />
      </a>
      <div
        class="_brandSocial_a5b977"
      >
        <a
          aria-label="okowFormie na LinkedIn"
          class="_isLinkedin_a5b977"
          href="https://www.linkedin.com/company/okowformie"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M6.94 5a1.94 1.94 0 1 1-3.88 0 1.94 1.94 0 0 1 3.88 0ZM3.5 8.5h3.4V20H3.5V8.5Zm6.2 0h3.26v1.57h.05c.45-.86 1.56-1.76 3.22-1.76 3.44 0 4.08 2.27 4.08 5.22V20h-3.4v-5.7c0-1.36-.02-3.1-1.89-3.1-1.9 0-2.19 1.48-2.19 3v5.8H9.7V8.5Z"
            />
          </svg>
        </a>
        <a
          aria-label="okowFormie na Instagramie"
          class="_isInstagram_a5b977"
          href="https://www.instagram.com/okowformie"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            stroke-width="1.8"
            viewBox="0 0 24 24"
          >
            <rect
              height="17"
              rx="5"
              width="17"
              x="3.5"
              y="3.5"
            />
            <circle
              cx="12"
              cy="12"
              r="4.2"
            />
            <circle
              cx="17.1"
              cy="6.9"
              fill="currentColor"
              r="0.9"
              stroke="none"
            />
          </svg>
        </a>
        <a
          aria-label="okowFormie na Facebooku"
          class="_isFacebook_a5b977"
          href="https://www.facebook.com/okowformie"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.5 21v-7.2h2.4l.36-2.8h-2.76V9.18c0-.81.22-1.36 1.39-1.36h1.48V5.32c-.26-.03-1.14-.11-2.17-.11-2.15 0-3.62 1.31-3.62 3.72v2.07H9.2v2.8h2.38V21h2.92Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
  <p
    class="_siteTitle_a5b977"
  >
    <span
      class="_siteTitleName_a5b977"
    >
      <span
        class="_siteTitleNameTeal_a5b977"
      >
        Oko
      </span>
       
      <span
        class="_siteTitleNameNavy_a5b977"
      >
        w
      </span>
       
      <span
        class="_siteTitleNameIndigo_a5b977"
      >
        Formie
      </span>
    </span>
    <span
      class="_siteTitleAuthor_a5b977"
    >
      Anna Kowalska
    </span>
  </p>
  <nav
    aria-label="Sekcje strony"
    class="_tabs_a5b977"
  >
    <a
      aria-current="page"
      class="_tab_a5b977 _tabActive_a5b977"
      href="/pl/o-mnie"
    >
      O mnie
    </a>
    <a
      class="_tab_a5b977"
      href="/pl/posty"
    >
      Posty
    </a>
  </nav>
</header>
`;

exports[`Header > dopasowuje snapshot z pustą \`social_links\` (panel jeszcze nieskonfigurowany) — logo z API, bez linków social 1`] = `
<header
  class="_siteHeader_a5b977"
>
  <div
    class="_brandBlock_a5b977"
  >
    <div
      class="_brandLogoCol_a5b977"
    >
      <a
        aria-label="okowFormie — strona główna"
        class="_brandLogoLink_a5b977"
        href="/pl/o-mnie"
      >
        <img
          alt=""
          class="_brandMark_a5b977"
          src="http://backend:8000/media/branding/logo/abc123.png"
        />
      </a>
    </div>
  </div>
  <p
    class="_siteTitle_a5b977"
  >
    <span
      class="_siteTitleName_a5b977"
    >
      <span
        class="_siteTitleNameTeal_a5b977"
      >
        Oko
      </span>
       
      <span
        class="_siteTitleNameNavy_a5b977"
      >
        w
      </span>
       
      <span
        class="_siteTitleNameIndigo_a5b977"
      >
        Formie
      </span>
    </span>
    <span
      class="_siteTitleAuthor_a5b977"
    >
      Anna Kowalska
    </span>
  </p>
  <nav
    aria-label="Sekcje strony"
    class="_tabs_a5b977"
  >
    <a
      aria-current="page"
      class="_tab_a5b977 _tabActive_a5b977"
      href="/pl/o-mnie"
    >
      O mnie
    </a>
    <a
      class="_tab_a5b977"
      href="/pl/posty"
    >
      Posty
    </a>
  </nav>
</header>
`;
